argocd/open-webui/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: open-webui-app
  name: open-webui-httproute
  namespace: open-webui
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - chat.yanello.net
  rules:
    - backendRefs:
        - name: open-webui
          namespace: open-webui
          port: 80
